<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.toshiba.uas_mobile.visi">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A. IT Consulting"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:textSize="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bidang1"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="B. System and Software Development"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bidang2"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="C. Managed IT Service"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bidang3"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="D. Product Development"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bidang4"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>
