<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.example.toshiba.uas_mobile.sejarah">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A. Sejarah"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/tv_sejarah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/sejarah"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="B. Visi"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/tv_visi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/visi"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="C. Misi"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/tv_misi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/misi"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="D. Solusi"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/tv_solusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/solusi"/>
    </LinearLayout>
</ScrollView>
<!--    <ListView
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"/>-->
</LinearLayout>
